# dam-song-tools-oss

./: Dockerfile  LICENSE  README.md  pyproject.toml  settings.ini
.devcontainer/: Dockerfile  devcontainer.json
dam_song_tools_cli/: cli.py
midi/: event.py  time_converter.py  utils.py
mtf/: __init__.py  mtf_audio.py  mtf_conversion.py  note_events_conversion.py  saiten_ref_conversion.py
okd/: __init__.py  adpcm.py  dump_binary.py  m_track_conversion.py  midi.py  midi_time_converter.py  oka_file.py  okd_file.py  okd_file_scramble.py  okd_midi.py  okd_scramble_pattern.py  p_track_conversion.py  utils.py
okd/chunks/: __init__.py  adpcm_chunk.py  chunk_base.py  extended_p_track_info_chunk.py  generic_chunk.py  m_track_chunk.py  okd_chunk.py  p3_track_info_chunk.py  p_track_chunk.py  p_track_info_chunk.py  utils.py
okd/mmt_tg/: __init__.py  midi_parameter_change_table.py  mmt_tg.py
sprc/: header.py
sprc_header/: sprc_header.py
test/: test_okd_midi.py
test/data/: p_track.mid
