[tool.poetry]
name = "dam-song-tools"
version = "0.1.0"
description = "Tools for DAM Karaoke Song data"
authors = ["KIRISHIKI Yudai <yudai.kirishiki@protonmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    {include = "dam_song_tools_cli"},
    {include = "midi"},
    {include = "mtf"},
    {include = "okd"},
    {include = "sprc"}
]

[tool.poetry.scripts]
dam-song-tools = "dam_song_tools_cli.cli:main"

[tool.poetry.dependencies]
python = "^3.13"
fastcrc = "^0.3.2"
fire = "^0.7.0"
mido = "^1.3.3"
numpy = "^2.2.1"
simplejson = "^3.19.3"
soundfile = "^0.12.1"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
